# dig-tls — the canonical mTLS certificate every DIG peer connection uses.
#
# dig-tls ships a PUBLIC DigNetwork CA (cert + key both public, compiled in — the Chia precedent:
# the CA key is NOT a secret, it is a shared trust-domain marker), mints per-peer node certs signed
# by that CA at first run, and builds the rustls mutual-auth `ServerConfig`/`ClientConfig` every DIG
# peer presents — verifying the leaf chains to the DigNetwork CA, pinning `peer_id = SHA-256(SPKI
# DER)`, and checking the #1204 BLS-G1 cert binding. It mirrors chia-blockchain's `create_ssl.py` +
# the chia-tls model 1:1, swapping in the DigNetwork trust domain and layering the BLS binding.
#
# Hierarchy: L00 (00-foundation). ZERO DIG-crate dependencies — the BLS-G2 sign/verify + G1 subgroup
# check are done via `chia-bls` + `blst` on raw bytes, so dig-tls does not depend on dig-identity
# (a same-level L00 crate). The caller passes its BLS identity secret key in.
[package]
name = "dig-tls"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "Apache-2.0 OR MIT"
description = "Canonical DIG peer mTLS: a shipped public DigNetwork CA, per-peer node certs, rustls mutual-auth configs, peer_id = SHA-256(TLS SPKI DER), and the #1204 BLS-G1 cert binding. Mirrors the chia-blockchain / chia-tls model with the DigNetwork trust domain."
repository = "https://github.com/DIG-Network/dig-tls"
readme = "README.md"
keywords = ["tls", "mtls", "ca", "p2p", "dig"]
categories = ["cryptography", "network-programming"]

[dependencies]
# The serving/dialing TLS stack. Pinned byte-identical to the sibling DIG crates (dig-nat / dig-cert:
# 0.23, default-features off, ring + std + tls12 + logging) so a consumer that links several of them
# installs exactly ONE CryptoProvider (ring) and never hits the "multiple CryptoProviders" panic.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# The DER/PEM cert + key wrapper types rustls, rcgen, and webpki share.
rustls-pki-types = "1"
# X.509 chain verification to the DigNetwork CA trust anchor, WITHOUT a server-name check (DIG peers
# dial by IP and authenticate by peer_id + BLS binding, not by hostname). `rustls-webpki` is the same
# path-validation engine rustls uses internally; we call it directly so the custom verifiers can add
# peer_id pinning + the BLS binding on top of a real chain-to-CA check.
webpki = { package = "rustls-webpki", version = "0.102", default-features = false, features = ["ring", "std"] }
# CA + per-peer leaf issuance. ring provider + PEM (de)serialization + x509-parser re-export — NO
# aws-lc, matching the ecosystem rustls posture. Also supports the custom-OID extension the #1204 BLS
# binding needs.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem", "x509-parser"] }
# Parse a leaf certificate to lift its SubjectPublicKeyInfo DER (for peer_id) and its extensions (for
# the BLS binding) — the same crate rcgen re-exports for inspection.
x509-parser = "0.16"
sha2 = "0.10"

# The node/relay BLS12-381 G1 identity crypto — BLS-G2 sign/verify under the Chia AugScheme, done on
# RAW bytes so dig-tls needs no DIG-crate dependency. dig-identity itself delegates to this exact
# crate + version; a conformance test pins that the two agree byte-for-byte.
chia-bls = "0.26"
# The ONE operation chia-bls does not expose directly: the raw G1 subgroup + non-identity check that
# rejects a small-subgroup / invalid-curve seal-target key before it is ever trusted (matches
# dig-identity::g1_subgroup_check verbatim).
blst = "0.3"

# The node's mTLS private key (PKCS#8 DER) and its BLS identity secret are held in scrubbing wrappers
# so every clone/drop erases the plaintext key bytes from freed heap.
zeroize = { version = "1", features = ["zeroize_derive"] }

# Structured errors + observability.
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# Drive a real end-to-end mTLS handshake over a loopback TCP socket (accept + connect) so the tests
# prove the rustls configs actually interoperate — a client cert signed by the DigNetwork CA is
# accepted, one that is NOT is rejected, and the BLS binding round-trips.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[profile.release]
overflow-checks = true
